--- a/Badar/Module 2/LABS 2/DSIA Lab 2.1.3.ipynb
+++ b/Badar/Module 2/LABS 2/DSIA Lab 2.1.3.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T02:45:26.790620Z",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T02:53:18.454636Z",
@@ -215,13 +215,13 @@
    "source": [
     "c.execute('DROP TABLE houses;')\n",
     "\n",
-    "# Save (commit) the changes:\n",
+    "\n",
     "conn.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T02:53:29.356866Z",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T02:53:32.085517Z",
@@ -267,12 +267,10 @@
    },
    "outputs": [],
    "source": [
-    "# A\n",
     "last_sale = (None, 4000, 5, 22, 619000)\n",
     "\n",
-    "# Execute Command\n",
+    "c.execute('INSERT INTO houses VALUES (?,?,?,?,?)',last_sale)\n",
     "\n",
-    "# Remember to commit the changes\n",
     "conn.commit()"
    ]
   },
@@ -292,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T02:53:39.925817Z",
@@ -304,16 +302,14 @@
    },
    "outputs": [],
    "source": [
-    "# A\n",
+    "\n",
     "recent_sales = [\n",
     "  (None, 2390, 4, 34, 319000),\n",
     "  (None, 1870, 3, 14, 289000),\n",
     "  (None, 1505, 3, 90, 269000),\n",
     "]\n",
     "\n",
-    "# Nb. The \"?\" parameters are placeholders for data that will map to the table columns during insertion;\n",
-    "# this is a security measure against SQL injection attacks:\n",
-    "# \n",
+    "c.executemany('INSERT INTO houses VALUES (?, ?, ?, ?, ?)', recent_sales)\n",
     "\n",
     "conn.commit()"
    ]
@@ -342,7 +338,7 @@
    },
    "outputs": [],
    "source": [
-    "# A"
+    "c.execute('select * from houses').fetchall()"
    ]
   },
   {
@@ -361,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:15.086181Z",
@@ -374,10 +370,8 @@
    "outputs": [],
    "source": [
     "from numpy import genfromtxt\n",
-    "\n",
-    "# import into nparray of ints, then convert to list of lists:\n",
     "data = genfromtxt('../DATA/housing-data.csv', dtype = 'i8', \n",
-    "                    delimiter = ',', skip_header = 1).tolist()"
+    "                    delimiter = ',', skip_header = 1).tolist()\n"
    ]
   },
   {
@@ -392,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:17.647051Z",
@@ -404,7 +398,6 @@
    },
    "outputs": [],
    "source": [
-    "# prepend a None value to beginning of each sub-list:\n",
     "for d in data:\n",
     "    d.insert(0, None)"
    ]
@@ -421,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:20.313136Z",
@@ -432,18 +425,8 @@
     "id": "dpjV2gEIlJQL",
     "outputId": "553d1507-35e9-4682-fd2f-141d26513a2c"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'list'>\n",
-      "[[None, 2104, 3, 70, 399900], [None, 1600, 3, 28, 329900], [None, 2400, 3, 44, 369000]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# check:\n",
     "print(type(data))\n",
     "print(data[0:3])"
    ]
@@ -460,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:23.383321Z",
@@ -472,7 +455,6 @@
    },
    "outputs": [],
    "source": [
-    "# loop through data, running an INSERT on each record (i.e. sublist):\n",
     "for d in data:\n",
     "    c.execute('INSERT INTO houses VALUES (?, ?, ?, ?, ?)', d)\n",
     "\n",
@@ -491,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:26.207906Z",
@@ -534,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:28.930270Z",
@@ -582,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:32.102245Z",
@@ -594,7 +576,9 @@
    },
    "outputs": [],
    "source": [
-    "# ANSWER"
+    "results = c.execute(\"SELECT * FROM houses WHERE bdrms = 4\")\n",
+    "\n",
+    "results.fetchall()"
    ]
   },
   {
@@ -609,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-03-21T03:00:40.229917Z",
@@ -620,24 +604,8 @@
     "id": "nkFpYIbVlJQg",
     "outputId": "a56eebd4-9f0b-483d-9e30-4305de3e25b6"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 1000.0, 169900.0),\n",
-       " (2, 1496.5, 280866.6666666667),\n",
-       " (3, 1814.1923076923076, 323465.3076923077),\n",
-       " (4, 2400.4285714285716, 377449.78571428574),\n",
-       " (5, 4478.0, 699900.0)]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ANSWER\n",
     "results = c.execute(\"SELECT bdrms, AVG(sqft) AS avg_sqft, AVG(price) AS avg_price FROM houses GROUP BY bdrms\")\n",
     "results.fetchall()"
    ]
@@ -1297,7 +1265,7 @@
    },
    "outputs": [],
    "source": [
-    "# ANSWER\n",
+    "\n",
     "orders.columns = [o.replace(' ', '_') for o in orders.columns.str.lower()]"
    ]
   },
@@ -1315,7 +1283,7 @@
    },
    "outputs": [],
    "source": [
-    "# ANSWER\n",
+    "\n",
     "orders_break_down.columns = [o.replace(' ', '_') for o in orders_break_down.columns.str.lower()]"
    ]
   },
@@ -1359,7 +1327,7 @@
     }
    ],
    "source": [
-    "# ANSWER\n",
+    "\n",
     "orders.dtypes"
    ]
   },
@@ -1395,7 +1363,7 @@
     }
    ],
    "source": [
-    "# ANSWER\n",
+    "\n",
     "orders_break_down.dtypes"
    ]
   },
