--- a/hieu/Lab1_Hieu/Lab 1.1.2 Calculus - Integral Lab_HieuDone.ipynb
+++ b/hieu/Lab1_Hieu/Lab 1.1.2 Calculus - Integral Lab_HieuDone.ipynb
@@ -30,33 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "49k4u8lCKcYy"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define a function such as f(x) = x**2\n",
     "def f(x):\n",
     "    x = x**2\n",
-    "    return x\n",
-    "\n",
-    "print(f(5))"
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -80,12 +70,29 @@
     "# plot f(x)\n",
     "x = np.arange(-10, 11, 1)\n",
     "y = f(x)\n",
-    "\n",
-    "plt.plot(x, y)\n",
-    "plt.xlabel('x')\n",
+    "plt.plot(x,y)\n",
     "plt.ylabel('f(x)')\n",
+    "plt.xlabel('x')\n",
     "plt.grid()\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-10  -9  -8  -7  -6  -5  -4  -3  -2  -1   0   1   2   3   4   5   6   7\n",
+      "   8   9  10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x)"
    ]
   },
   {
@@ -132,7 +139,7 @@
     }
    ],
    "source": [
-    "# define integral of f(x) ####Revise\n",
+    "# c ####Revise\n",
     "# integral of a function is the area under the curve of this function\n",
     "# it can be approximated by plotting lots of retangles and add their areas\n",
     "# the more reactangles you draw, the better is the approximation\n",
@@ -145,7 +152,7 @@
     "        area = width * height\n",
     "        totalArea += area\n",
     "    return totalArea\n",
-    "print(integral(1,10,100000))"
+    "print(integral(1,10,100000))\n"
    ]
   },
   {
